--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+      <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
   </head>
 <body>
   <header>
@@ -74,7 +77,7 @@ Phasellus at justo eu nibh pretium sagittis vitae sagittis purus. In mi metus, m
 Sed pharetra pharetra mi, sed ornare sem mattis vel. Donec id rhoncus ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi eleifend purus a nibh accumsan egestas vitae ac turpis. Duis vestibulum lacus neque. Cras viverra eleifend lobortis. Donec condimentum nunc ligula, in placerat tellus varius quis. Phasellus non faucibus est. Aliquam et elit ac sapien euismod cursus et quis ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut convallis, est nec consequat faucibus, nibh sem iaculis turpis, ut sodales nibh sapien a quam. Maecenas at elit consectetur, elementum tortor nec, finibus nulla. Praesent eget nulla ultricies, pulvinar quam a, vestibulum lacus. In sed placerat eros.
 
      </p>
-        </section>
+     </section>
 
     </div>
 
