--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-      <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
   </head>
 <body>
   <header>
@@ -83,8 +80,7 @@ Sed pharetra pharetra mi, sed ornare sem mattis vel. Donec id rhoncus ex. Lorem 
 
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/npm.js"></script>
+  <script src="js/bootstrap.js"></script>
 </body>
 </html>
