--- a/index.html
+++ b/index.html
@@ -82,5 +82,7 @@ Sed pharetra pharetra mi, sed ornare sem mattis vel. Donec id rhoncus ex. Lorem 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/npm.js"></script>
   <script src="js/bootstrap.js"></script>
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
